feat: remove the dependency to ghq
BREAKING CHANGE: remove some variables and add some required variables.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,3 @@
----
 # defaults file for neovim-conf
-xdg_config_home: "{{ ansible_env.get('XDG_CONFIG_HOME', '{}/.config'.format(ansible_env.HOME)) }}"
-neovim_conf_undodir: ""
+neovim_conf_xdg_config_home: "{{ ansible_env.get('XDG_CONFIG_HOME', '{}/.config'.format(ansible_env.HOME)) }}"
+neovim_conf_version: HEAD
