--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,19 +1,19 @@
 galaxy_info:
   author: Suzuki Shunsuke
-  description: Install your neovim configuration hosted on the GitHub.
+  description: ansible role to install neovim configuration hosted on the GitHub.
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 2.2
   github_branch: master
 
   platforms:
-  - name: GenericLinux
-    versions:
-    - all
-  - name: MacOSX
-    versions:
-    - all
+    - name: GenericLinux
+      versions:
+        - all
+    - name: MacOSX
+      versions:
+        - all
 
   galaxy_tags:
-  - neovim
+    - neovim
 
 dependencies: []
