--- a/tests/roles.yml
+++ b/tests/roles.yml
@@ -1,4 +1,1 @@
-- src: suzuki-shunsuke.git-ubuntu
-- src: suzuki-shunsuke.go-ubuntu
-- src: suzuki-shunsuke.go-module
-- src: suzuki-shunsuke.ghq-module
+- geerlingguy.git
